another fix for logo in side menu for smaller resolutions on mobile devices

--- a/bekindred/static/beKindredFrontend/src/app/index.scss
+++ b/bekindred/static/beKindredFrontend/src/app/index.scss
@@ -1760,7 +1760,6 @@ Responsive
 }
 #side-menu-logo {
   position: absolute!important;
-  bottom: 0px!important;
   padding: 0 auto;
 }
 #side-menu-logo h2 {
